RESOLVED FIXED244049
Regression(252534@main): LocalStorage directory is not resolved before creating sandbox extension
https://bugs.webkit.org/show_bug.cgi?id=244049
Summary Regression(252534@main): LocalStorage directory is not resolved before creati...
Sihui Liu
Reported 2022-08-17 12:45:49 PDT
...
Attachments
Sihui Liu
Comment 1 2022-08-17 12:57:07 PDT
Sihui Liu
Comment 2 2022-08-17 12:57:45 PDT
EWS
Comment 3 2022-08-17 14:19:37 PDT
Committed 253537@main (23bb0ec47b18): <https://commits.webkit.org/253537@main> Reviewed commits have been landed. Closing PR #3419 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.